fix: mimap resuorce

--- a/app/src/main/res/layout/demo_acti.xml
+++ b/app/src/main/res/layout/demo_acti.xml
@@ -57,12 +57,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Login"></Button>
+            android:text="Login">
+        </Button>
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel"></Button>
+            android:text="Cancel">
+        </Button>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
